# IRS_2025_Group_4

./: README.md  timebelt_updated.st
autonomous_nav/: package.xml  setup.py
autonomous_nav/autonomous_nav/: hs_waypoint_follower.py
hand_solo_arm/: package.xml  setup.py
hand_solo_virtual_nav/: setup.py
hand_solo_virtual_nav/hand_solo_virtual_nav/: hs_waypoint_follower.py
hand_solo_virtual_nav/launch/: nav_launch.py
hand_solo_virtual_nav/map/: pa_warehouse_map_01.pgm  pa_warehouse_map_01.yaml  pa_warehouse_map_02.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autonomous_nav/lib/autonomous_nav/: hs_waypoint_follower
install/autonomous_nav/share/autonomous_nav/: package.dsv  package.ps1  package.sh
install/autonomous_nav/share/autonomous_nav/config/: pa_nav2_params.yaml
install/autonomous_nav/share/autonomous_nav/map/: pa_warehouse_map_02.pgm
install/hand_solo_arm/lib/hand_solo_arm/: hs_pick_place
install/hand_solo_arm/share/hand_solo_arm/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hand_solo_virtual_nav/lib/hand_solo_virtual_nav/: hs_waypoint_follower
install/hand_solo_virtual_nav/share/hand_solo_virtual_nav/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pa_warehouse_status/lib/pa_warehouse_status/: pineapple_gossip_bot  plc_hmi_listener
install/pa_warehouse_status/share/pa_warehouse_status/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
pa_warehouse_status/: setup.py
