<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="amina@badri.name">student</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  
  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
